[package]
name = "iron-kaleidoscope"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

inkwell = {version = "0.2.0", features = ["llvm16-0"]}
llvm-sys = {version = "160.0.6",features = ["prefer-dynamic"]}
libc = "0.2.149"
either = "1.9.0"